--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -30,7 +30,6 @@
   grid-column-end: 4;
   grid-row-start: 2;
   grid-row-end: 4;
-  background-color: beige;
 }
 
 .salesOverview {
@@ -39,9 +38,111 @@
   padding-top: 12%;
 }
 
-.hyjjfa {
-  background: url('./public/hyjjfafb.png');
+.xqhz {
+  background: url('./public/xqhz.png');
   background-size: 100% 100%;
+  padding-top: 12%;
+}
+
+.hyjjfa {
+  background: url('./public/hyjjfafb.png') no-repeat;
+  background-size: 100% 55%;
+  padding-top: 15%;
+}
+
+.hyxsfb {
+  background: url('./public/hyxsfb.png') no-repeat;
+  background-size: 100% 35%;
+  padding-top: 15%;
+}
+
+.hyjjfafbx {
+  background: url('./public/hyjjfafbx.png') no-repeat;
+  background-size: 100% 115%;
+  padding-top: 15%;
+}
+
+.bzwtzl {
+  background: url('./public/bzwtzl.png');
+  background-size: 100% 100%;
+  padding-top: 12%;
+}
+
+.zjztzl {
+  background: url('./public/zjztzl.png');
+  background-size: 100% 100%;
+  padding-top: 12%;
+
+  .tabelHeader > th {
+    color: #ffffff;
+    background: #087480;
+  }
+
+  .dark > td {
+    color: #ffffff;
+    background: #060b3a !important;
+  }
+
+  .light > td {
+    color: #ffffff;
+    background: #041a5a !important;
+  }
+}
+
+.redLight {
+  background: url('./public/redLight.png');
+  background-size: 100% 100%;
+  width: 22px;
+  height: 22px;
+}
+
+.greenLight {
+  background: url('./public/greenLight.png');
+  background-size: 100% 100%;
+  width: 22px;
+  height: 22px;
+}
+
+.jjfaqj {
+  background: url('./public/jjfaqj.png') no-repeat;
+  background-position-x: right;
+}
+
+.sthzywzl {
+  background: url('./public/sthzywzl.png') no-repeat;
+  background-size: 100% 100%;
+  padding-top: 12%;
+
+  .left {
+    width: 40%;
+    height: 300px;
+    margin-left: 170px;
+    margin-top: 40px;
+    background: url('./public/leftCircle.png') no-repeat;
+
+    .text {
+      color: #ffffff;
+      text-align: center;
+      padding-top: 80px;
+      padding-right: 100px;
+      font-size: 20px;
+    }
+  }
+
+  .right {
+    width: 50%;
+    height: 300px;
+    margin-top: 40px;
+    background: url('./public/rightCircle.png') no-repeat;
+
+    .text {
+      color: #ffffff;
+      text-align: center;
+      padding-top: 80px;
+      padding-right: 180px;
+      font-size: 20px;
+    }
+  }
 }
 
 .tabSelf {
