--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -2074,13 +2074,13 @@ button:after {
 body {
   width: 19.2rem;
   height: 10.8rem;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .uc-wrap {
   width: 19.2rem;
   height: 10.8rem;
-  overflow: hidden;
+  overflow: auto;
   background: url('images/bg.jpg') center bottom no-repeat;
   background-size: 100% 100%;
   padding: 1.1rem 0.4rem 0.2rem;
