--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -89,6 +89,10 @@ textarea {
   margin: 0;
 }
 
+p {
+  font-size: 0.1rem;
+}
+
 button,
 input {
   overflow: visible;
@@ -201,7 +205,7 @@ html {
 }
 
 body {
-  font-size: 14px;
+  font-size: 12px;
   color: #effff9;
   background: #ffffff;
   min-width: 1200px;
@@ -1266,6 +1270,7 @@ img {
 .uc-icon40 {
   width: 40px !important;
   height: 40px !important;
+  margin-right: 0 !important;
 }
 
 .uc-icon44 {
