--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -2757,6 +2757,29 @@ header .g-clock time {
   border: #004fc2 1px solid;
 }
 
+.uc-home .table::-webkit-scrollbar {
+  width: 5px;
+  height: 2px;
+  background-color: transparent;
+  border-radius: 2px;
+}
+
+.uc-home .table::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: transparent;
+}
+
+.uc-home .table::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgba(0, 231, 247, 0.6);
+}
+
+.uc-home .table::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 231, 247, 0.6);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
 .uc-home .table table {
   width: 100%;
 }
