--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -2776,7 +2776,7 @@ header .g-clock time {
 
 .uc-home .table {
   width: 3.7rem;
-  margin: 0.05rem auto 0;
+  margin: 0 auto;
   border: #004fc2 1px solid;
 }
 
